# chess-ai

./: .gitignore  CMakeLists.txt  ChessAI.cbp  ChessAI.depend  ChessAI.layout  Makefile  MaxMoveGen.txt  README.md  evaluate.cpp  execute.cpp  knight.cpp  main.cpp  main.h  minimax.cpp  print.cpp  stats.txt  tree.cpp
src/: bishop.cpp  king.cpp  move.cpp  pawn.cpp  queen.cpp  rook.cpp
